# harmonia

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  architecture.md  artwork_pipeline.md  database.md  duplicate_detection.md  implementation_plan.md  metadata_engine.md  plugin_system.md  prd.md  providers.md  pyproject.toml
harmonia/: __init__.py  __main__.py
harmonia/cli/: __init__.py  actions.py  app.py  menu.py  metadata_menu.py
harmonia/core/: __init__.py  library.py  models.py
harmonia/core/artwork/: __init__.py
harmonia/core/duplicates/: __init__.py  detector.py  quality.py  report.py
harmonia/core/metadata/: __init__.py  common.py  normalize.py  reader.py  rename.py  validate.py  writer.py
harmonia/core/quality/: __init__.py
harmonia/core/reports/: __init__.py  metadata_report.py
harmonia/core/scanner/: __init__.py  scanner.py
harmonia/database/: __init__.py  db.py  schema.py
harmonia/jobs/: __init__.py  job.py
harmonia/providers/: __init__.py  base.py  dummy.py  manager.py
harmonia/tui/: __init__.py  app.py  constants.py  styles.tcss
harmonia/tui/screens/: __init__.py  artwork.py  base.py  duplicates.py  main_menu.py  metadata.py  quality.py  reports.py  scan.py  settings.py
harmonia/utils/: __init__.py  format.py  hashing.py  logging.py  paths.py
tests/: conftest.py  test_artwork.py  test_database.py  test_duplicates.py  test_editing.py  test_metadata.py  test_normalize.py  test_providers.py  test_quality.py  test_rename.py  test_reports.py  test_scanner.py  test_validate.py
